--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
   "name": "react-gesture",
   "version": "0.0.1",
-  "description": "React Gesture",
+  "description": "A React component for defining gestures.",
+  "keywords": [
+    "react",
+    "component",
+    "gesture"
+  ],
+  "author": {
+    "name": "Rostyslav Khanas",
+    "url": "https://github.com/rtkhanas"
+  },
   "scripts": {
     "clean": "rimraf lib",
     "lint": "eslint src",
     "build": "npm run lint && npm run clean && babel src --out-dir lib",
     "build:all": "npm run build && cd examples/main && webpack"
   },
+  "license": "MIT",
   "files": [
     "lib"
   ],
   "main": "lib/index.js",
-  "_TODO": "Remove estraverse-fb, hack for eslint",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:opensource-cards/react-gesture.git"
+  },
   "dependencies": {
     "autobind-decorator": "^1.3.3",
     "react": "^0.14.5"
@@ -21,7 +34,7 @@
     "babel": "^6.3.26",
     "babel-cli": "^6.2.0",
     "babel-core": "^6.7.2",
-    "babel-eslint": "^5.0.0",
+    "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.5.0",
@@ -30,7 +43,6 @@
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
     "eslint-plugin-react": "^4.2.3",
-    "estraverse-fb": "^1.3.1",
     "rimraf": "^2.3.4",
     "webpack": "^1.12.14"
   }
