--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-gesture",
-  "version": "0.0.1",
+  "version": "0.0.2-rc.0",
   "description": "A React component for defining gestures.",
   "keywords": [
     "react",
@@ -28,22 +28,23 @@
   },
   "dependencies": {
     "autobind-decorator": "^1.3.3",
-    "react": "^0.14.5"
+    "react": "^15.0.1"
   },
   "devDependencies": {
     "babel": "^6.3.26",
-    "babel-cli": "^6.2.0",
-    "babel-core": "^6.7.2",
+    "babel-cli": "^6.7.5",
+    "babel-core": "^6.7.6",
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.5.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "eslint": "^2.4.0",
-    "eslint-config-airbnb": "^6.1.0",
-    "eslint-plugin-react": "^4.2.3",
+    "eslint": "^2.8.0",
+    "eslint-config-airbnb": "^7.0.0",
+    "eslint-plugin-jsx-a11y": "^0.6.2",
+    "eslint-plugin-react": "^4.3.0",
     "rimraf": "^2.3.4",
-    "webpack": "^1.12.14"
+    "webpack": "^1.13.0"
   }
 }
