--- a/.eslintrc
+++ b/.eslintrc
@@ -2,11 +2,6 @@
   "parser": "babel-eslint",
   "extends": "airbnb",
   "rules": {
-    "indent": 0,
-    "no-nested-ternary": 0,
-    "no-param-reassign": 0,
-    "prefer-arrow-callback": 0,
-    "space-before-function-paren": 0,
-    "react/jsx-indent-props": [0, 0]
+    "no-param-reassign": 0
   }
 }
