--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-gesture",
-  "version": "0.0.2-rc.9",
+  "version": "0.0.2-rc.10",
   "description": "A React component for defining gestures.",
   "keywords": [
     "react",
@@ -15,7 +15,7 @@
     "clean": "rimraf lib",
     "lint": "eslint src",
     "build": "npm run lint && npm run clean && babel src --out-dir lib",
-    "build:all": "npm run build && cd examples/main && webpack"
+    "start": "cd examples/main && webpack-dev-server --inline --hot"
   },
   "license": "MIT",
   "files": [
@@ -26,26 +26,27 @@
     "type": "git",
     "url": "git@github.com:opensource-cards/react-gesture.git"
   },
-  "dependencies": {
-    "autobind-decorator": "^1.3.3",
-    "react": "^15.1.0"
+  "dependencies": {},
+  "peerDependencies": {
+    "react": "^15.0.0"
   },
   "devDependencies": {
     "babel": "^6.3.26",
-    "babel-cli": "^6.10.1",
-    "babel-core": "^6.9.1",
-    "babel-eslint": "^6.0.3",
-    "babel-loader": "^6.2.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.5",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.3.13",
-    "eslint": "^2.12.0",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.4.2",
-    "eslint-plugin-react": "^5.1.1",
-    "rimraf": "^2.3.4",
-    "webpack": "^1.13.1"
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "eslint": "^3.4.0",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-jsx-a11y": "^2.2.1",
+    "eslint-plugin-react": "^6.2.0",
+    "react-hot-loader": "^1.3.0",
+    "rimraf": "^2.5.4",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.1"
   }
 }
