--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-gesture",
-  "version": "0.0.2-rc.13",
+  "version": "0.0.3",
   "description": "A React component for defining gestures.",
   "keywords": [
     "react",
@@ -12,10 +12,12 @@
     "url": "https://github.com/rtkhanas"
   },
   "scripts": {
+    "demo:build": "cd docs && webpack",
+    "demo": "cd docs && webpack-dev-server --inline --hot",
     "clean": "rimraf lib",
     "lint": "eslint src",
     "build": "npm run lint && npm run clean && babel src --out-dir lib",
-    "start": "cd examples/main && webpack-dev-server --inline --hot"
+    "release": "npm run build && npm run demo:build"
   },
   "license": "MIT",
   "files": [
@@ -39,6 +41,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "binary-ui-styles": "^0.1.0-rc.10",
     "eslint": "^3.6.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^2.0.0",
